Adds the browse product, cart associated with authenticated user, low stock notification and daily sales report jobs

--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,13 @@ DB_CONNECTION=sqlite
 # DB_USERNAME=root
 # DB_PASSWORD=
 
+DB_CONNECTION=pgsql
+DB_HOST=db
+DB_PORT=5432
+DB_DATABASE=ecommerce_cart
+DB_USERNAME=ecommerce
+DB_PASSWORD=secret
+
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
